tests/sources/invalid/expressions/cast_to_class_type.fire
// Semantic error: casting a numeric literal to a user-defined class type
// (syntactically an identifier target for postfix 'as', but not a valid
// cast target semantically).

class Widget {
    id: int32;

    fn Widget(id: int32) {
        this.id = id;
    }
}

fn cast_to_class_type() -> void {
    w: Widget = 5 as Widget;  //~ ERROR FS-SEM-0010 @22
}
